fix: prettier config

--- a/packages/docs/services/inversify-binding-decorators-site/src/css/custom.css
+++ b/packages/docs/services/inversify-binding-decorators-site/src/css/custom.css
@@ -34,12 +34,36 @@
   --blue-lightest: calc(var(--blue) * var(--lightest-factor));
 
   --ifm-color-primary: rgb(var(--red), var(--green), var(--blue));
-  --ifm-color-primary-dark: rgb(var(--red-dark), var(--green-dark), var(--blue-dark));
-  --ifm-color-primary-darker: rgb(var(--red-darker), var(--green-darker), var(--blue-darker));
-  --ifm-color-primary-darkest: rgb(var(--red-darkest), var(--green-darkest), var(--blue-darkest));
-  --ifm-color-primary-light: rgb(var(--red-light), var(--green-light), var(--blue-light));
-  --ifm-color-primary-lighter: rgb(var(--red-lighter), var(--green-lighter), var(--blue-lighter));
-  --ifm-color-primary-lightest: rgb(var(--red-lightest), var(--green-lightest), var(--blue-lightest));
+  --ifm-color-primary-dark: rgb(
+    var(--red-dark),
+    var(--green-dark),
+    var(--blue-dark)
+  );
+  --ifm-color-primary-darker: rgb(
+    var(--red-darker),
+    var(--green-darker),
+    var(--blue-darker)
+  );
+  --ifm-color-primary-darkest: rgb(
+    var(--red-darkest),
+    var(--green-darkest),
+    var(--blue-darkest)
+  );
+  --ifm-color-primary-light: rgb(
+    var(--red-light),
+    var(--green-light),
+    var(--blue-light)
+  );
+  --ifm-color-primary-lighter: rgb(
+    var(--red-lighter),
+    var(--green-lighter),
+    var(--blue-lighter)
+  );
+  --ifm-color-primary-lightest: rgb(
+    var(--red-lightest),
+    var(--green-lightest),
+    var(--blue-lightest)
+  );
   --ifm-code-font-size: 95%;
 
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
